--- a/novo-site/site/index.html
+++ b/novo-site/site/index.html
@@ -46,7 +46,7 @@
 		<header>
 			<div id="top">
 				<div class="container">
-					<p class="pull-left text-note hidden-xs"><i class="fa fa-phone"></i> Need Support? 1-800-666-8888</p>
+					<p class="pull-left text-note hidden-xs"><i class="fa fa-phone"></i> Entre em contato: (11) 4123-7244 | (11) 7713-1145 | ID 54*248088</p>
 					<ul class="nav nav-pills nav-top navbar-right">
 						<li class="login"><a href="javascript:void(0);"><i class="fa fa-user"></i></a></li>
 						<li><a href="#" title="" data-placement="bottom" data-toggle="tooltip" data-original-title="Email"><i class="fa fa-envelope-o"></i></a></li>
@@ -67,31 +67,20 @@
 							<li class="dropdown active">
                                 <a href="index.html" data-target="#" class="dropdown-toggle" data-toggle="dropdown">Home</a>
 							</li>
-							<li class="dropdown"><a href="#" class="dropdown-toggle" data-toggle="dropdown">Properties</a>
-								
+							<li class="dropdown">
+                                <a href="#" class="dropdown-toggle" data-toggle="dropdown">Comprar</a>
 							</li>
-							<li class="dropdown"><a href="#" class="dropdown-toggle" data-toggle="dropdown">Agents</a>
-								<ul class="dropdown-menu">
-									<li><a href="ouragents.html">Our Agents</a></li>
-									<li><a href="agentprofile.html">Agent Profile</a></li>
-								</ul>
+                            <li class="dropdown">
+                                <a href="#" class="dropdown-toggle" data-toggle="dropdown">Vender</a>
 							</li>
-							<li class="dropdown"><a href="#" class="dropdown-toggle" data-toggle="dropdown">Pages</a>
-								<ul class="dropdown-menu">
-									<li><a href="about-us.html">About Us</a></li>
-									<li><a href="faq-sidebar.html">FAQs</a></li>
-									<li><a href="page-404.html">404-page</a></li>
-								</ul>
+                            <li class="dropdown">
+                                <a href="#" class="dropdown-toggle" data-toggle="dropdown">Alugar</a>
 							</li>
-							<li class="dropdown"><a href="#" class="dropdown-toggle" data-toggle="dropdown">Blog</a>
-								<ul class="dropdown-menu">
-									<li><a href="blog.html">Blog Large With Sidebar</a></li>
-									<li><a href="blog-2-cols.html">Blog 2 Columns</a></li>
-									<li><a href="blog-2-cols-sidebar.html">Blog 2 Columns With Sidebar</a></li>
-									<li><a href="blog-single.html">Article detail</a></li>
-								</ul>
+                            <li class="dropdown">
+                                <a href="#" class="dropdown-toggle" data-toggle="dropdown">Sobre nós</a>
 							</li>
-							<li><a href="contact.html">Contact Us</a></li>
+							
+							<li><a href="contact.html">Contate-nos</a></li>
 						</ul>
 					</div><!--/.nav-collapse --> 
 				</div><!--/.container-fluid --> 
